# project-circle-square-server

./: .gitignore  main.py  pyproject.toml  requirements.txt  vercel.json
.vercel/: project.json
src/: Session.py  __init__.py  sessions.py
