[tool.poetry]
name = "project-circle-square-server "
version = "0.1.0"
description = ""
authors = ["Yannick Wiggers <yannick.wiggers@kolibrigames.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.7"
uvicorn = "^0.34.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
